fixed a few positioning bugs on mobile view

--- a/styles/compose.css
+++ b/styles/compose.css
@@ -90,3 +90,10 @@
 .contact__discardButton:hover {
   text-decoration: underline;
 }
+
+/* Responsive Layout */
+@media screen and (max-width: 620px) {
+  .header__wrapper {
+    display: none;
+  }
+}
